fix: get entities by id