@@ -5,15 +5,15 @@ import lombok.RequiredArgsConstructor;
 import org.polozkov.dto.comment.CommentRequestTo;
 import org.polozkov.dto.comment.CommentResponseTo;
 import org.polozkov.entity.comment.Comment;
+import org.polozkov.entity.issue.Issue;
 import org.polozkov.exception.NotFoundException;
 import org.polozkov.mapper.comment.CommentMapper;
 import org.polozkov.repository.comment.CommentRepository;
-import org.polozkov.repository.issue.IssueRepository;
+import org.polozkov.service.issue.IssueService;
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Validated
@@ -21,25 +21,26 @@ import java.util.stream.Collectors;
 public class CommentService {
 
     private final CommentRepository commentRepository;
-    private final IssueRepository issueRepository;
+    private final IssueService issueService;
     private final CommentMapper commentMapper;
 
     public List<CommentResponseTo> getAllComments() {
         return commentRepository.findAll().stream()
                 .map(commentMapper::commentToResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public CommentResponseTo getCommentById(Long id) {
-        return commentRepository.findById(id)
-                .map(commentMapper::commentToResponseDto)
-                .orElseThrow(() -> new RuntimeException("Comment not found with id: " + id));
+        Comment comment = commentRepository.getById(id);
+        return commentMapper.commentToResponseDto(comment);
+    }
+
+    public Comment getCommentEntityById(Long id) {
+        return commentRepository.getById(id);
     }
 
     public CommentResponseTo createComment(@Valid CommentRequestTo commentRequest) {
-        if (!issueRepository.existsById(commentRequest.getIssueId())) {
-            throw new RuntimeException("Issue not found with id: " + commentRequest.getIssueId());
-        }
+        Issue issue = issueService.getIssueById(commentRequest.getIssueId());
 
         Comment comment = commentMapper.requestDtoToComment(commentRequest);
 
@@ -48,15 +49,11 @@ public class CommentService {
     }
 
     public CommentResponseTo updateComment(@Valid CommentRequestTo commentRequest) {
-        if (!commentRepository.existsById(commentRequest.getId())) {
-            throw new RuntimeException("Comment not found with id: " + commentRequest.getId());
-        }
+        commentRepository.getById(commentRequest.getId());
 
-        if (!issueRepository.existsById(commentRequest.getIssueId())) {
-            throw new RuntimeException("Issue not found with id: " + commentRequest.getIssueId());
-        }
+        Issue issue = issueService.getIssueById(commentRequest.getIssueId());
 
-        Comment comment = commentRepository.findById(commentRequest.getId()).orElseThrow(() -> new NotFoundException("Comment not found with id: " + commentRequest.getId()));
+        Comment comment = getCommentEntityById(commentRequest.getId());
         comment = commentMapper.updateComment(comment, commentRequest);
 
         Comment updatedComment = commentRepository.update(comment);
@@ -64,9 +61,13 @@ public class CommentService {
     }
 
     public void deleteComment(Long id) {
+        commentRepository.getById(id);
+        commentRepository.deleteById(id);
+    }
+
+    public void validateCommentExists(Long id) {
         if (!commentRepository.existsById(id)) {
             throw new NotFoundException("Comment not found with id: " + id);
         }
-        commentRepository.deleteById(id);
     }
 }
