@@ -5,6 +5,7 @@ import lombok.RequiredArgsConstructor;
 import org.polozkov.dto.user.UserRequestTo;
 import org.polozkov.dto.user.UserResponseTo;
 import org.polozkov.entity.user.User;
+import org.polozkov.exception.BadRequestException;
 import org.polozkov.exception.NotFoundException;
 import org.polozkov.mapper.user.UserMapper;
 import org.polozkov.repository.user.UserRepository;
@@ -12,7 +13,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Validated
@@ -25,20 +25,18 @@ public class UserService {
     public List<UserResponseTo> getAllUsers() {
         return userRepository.findAll().stream()
                 .map(userMapper::userToResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public UserResponseTo getUserById(Long id) {
-        return userRepository.findById(id)
-                .map(userMapper::userToResponseDto)
-                .orElseThrow(() -> new RuntimeException("User not found with id: " + id));
+    public UserResponseTo getUser(Long id) {
+        User user = userRepository.getById(id);
+        return userMapper.userToResponseDto(user);
     }
 
     public UserResponseTo createUser(@Valid UserRequestTo userRequest) {
-        userRepository.findByLogin(userRequest.getLogin())
-                .ifPresent(user -> {
-                    throw new RuntimeException("User with login " + userRequest.getLogin() + " already exists");
-                });
+        if (userRepository.findByLogin(userRequest.getLogin()).isPresent()) {
+            throw new BadRequestException("User with login " + userRequest.getLogin() + " already exists");
+        }
 
         User user = userMapper.requestDtoToUser(userRequest);
         User savedUser = userRepository.save(user);
@@ -46,9 +44,7 @@ public class UserService {
     }
 
     public UserResponseTo updateUser(@Valid UserRequestTo userRequest) {
-        if (!userRepository.existsById(userRequest.getId())) {
-            throw new RuntimeException("User not found with id: " + userRequest.getId());
-        }
+        userRepository.getById(userRequest.getId());
 
         User user = userRepository.findById(userRequest.getId()).orElseThrow(() -> new NotFoundException("User not found with id: " + userRequest.getId()));
         user = userMapper.updateUser(user, userRequest);
@@ -56,9 +52,11 @@ public class UserService {
     }
 
     public void deleteUser(Long id) {
-        if (!userRepository.existsById(id)) {
-            throw new NotFoundException("User not found with id: " + id);
-        }
+        userRepository.getById(id);
         userRepository.deleteById(id);
+    }
+
+    public User getUserById(Long id) {
+        return userRepository.getById(id);
     }
 }
